--- a/src/main/webapp/css/frame-content.css
+++ b/src/main/webapp/css/frame-content.css
@@ -6,6 +6,8 @@ body {
     color: #cfd2da;
     background-color: #252830;
     padding-top: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 a{ text-decoration: none;}
 a:hover{ text-decoration: none;}
@@ -71,6 +73,25 @@ h1, h2, h3,  .a, .b, .c, .d, .e, .f {
     float: right;
     margin-top: 12px;
     margin-left: 0;
+    height: 30px;
+    line-height: 30px;
+}
+.dept_list button{
+    background-color:#434857 ;
+    color: #fff;
+    height: 30px;
+    line-height: 10px;
+    border-color: transparent;
+}
+
+.dept_list button:hover{
+    background-color: #fff;
+    color:#434857 ;
+}
+.dept_list button:active{
+    background-color: #fff;
+    color:#434857 ;
+    border: transparent;
 }
 .qb {
     display: -webkit-box;
@@ -128,9 +149,21 @@ table {
     padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #434857;
+    word-break: normal;
 }
 .btn-operator{
     background: transparent;
     text-align: center;
     color: #0275d8;
+}
+
+.dropdown-menu{
+    width: 410px;
+    float: right;
+    right: 0;
+    left: auto;
+}
+.dropdown-item{
+    width: auto;
+    clear: none;
 }
