--- a/src/main/webapp/css/frame-content.css
+++ b/src/main/webapp/css/frame-content.css
@@ -79,8 +79,6 @@ h1, h2, h3,  .a, .b, .c, .d, .e, .f {
 .dept_list button{
     background-color:#434857 ;
     color: #fff;
-    height: 30px;
-    line-height: 10px;
     border-color: transparent;
 }
 
@@ -166,4 +164,27 @@ table {
 .dropdown-item{
     width: auto;
     clear: none;
+}
+.dropdown-item a{
+     width: auto;
+     clear: none;
+     color: #fff;
+ }
+.nav-tabs {
+    border-bottom: 1px solid #434857;
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: #fff;
+    background-color: #252830;
+    border-color: #434857 #434857 transparent;
+}
+.nav-link{
+    width: auto;
+    clear: none;
+    color: #cfd2da;
+}
+.nav-link:hover{
+    border: 1px solid #51586a;
+    border-bottom: 0px;
+    color: #eee;
 }
